# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  rb_libtorrent-9999.ebuild:
  fix 9999

  28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +metadata.xml:
  repoman fix
