@@ -18,7 +18,7 @@ LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 
-IUSE="log debug +dht doc +crypt pool-allocators statistics disk-stats +geoip -examples test python-binding +zlib"
+IUSE="log debug +dht doc +crypt pool-allocators statistics disk-stats +geoip -examples test python +zlib"
 
 DEPEND=">=sys-devel/libtool-2.2.6
 		dev-util/pkgconfig
@@ -28,15 +28,15 @@ COMMON_DEPEND=">=dev-libs/boost-1.36
 				encryption? ( dev-libs/openssl )
 				geoip? ( dev-libs/geoip )
 				zlib? ( sys-libs/zlib )
-				python-binding? ( =dev-lang/python-2*
-									>=dev-libs/boost-1.36[python] )"
+				python? ( =dev-lang/python-2*
+						>=dev-libs/boost-1.36[python] )"
 
 RDEPEND="${COMMON_DEPEND}"
 
 src_prepare(){
 	elibtoolize
 	eautoreconf
-	if use python-binding;then
+	if use python;then
 		cd "${S}"/bindings/python
 		distutils_src_prepare
 	 fi
@@ -59,14 +59,14 @@ src_configure() {
 		$(use_enable geoip) \
 		$(use_enable examples) \
 		$(use_enable test tests) \
-		$(use_enable python-binding ) \
+		$(use_enable python python-binding ) \
 		$(use_with zlib) \
 		${myconf} || die "econf failed"
 }
 
 src_compile() {
 	emake || die "emake failed"
-	if use python-binding; then
+	if use python; then
 		cd "${S}"/bindings/python
 		distutils_src_compile
 
@@ -82,7 +82,7 @@ src_install() {
 		doins -r "${S}"/docs/
 	fi
 
-	if use python-binding;then
+	if use python; then
 		cd "${S}"/bindings/python
 		distutils_src_install
 	fi
